# printf

./: .gitignore  1-testing  CMakeLists.txt  README.md  _printf.c  char_string_format_func.c  format_functions.c  get_fmt_function.c  int_binary.c  main.c  main.h  memory_addr_format_func.c  non_printable.c  number_format_func.c  octal_hexadecimal.c  reverse.c  utils.c  write_handlers.c
test/: CMakeLists.txt  test.c  test_binary.cc  test_buffer.cc  test_char_string_percent_format.cc  test_number_format.cc  test_printf.cc  test_printf.h  test_special_format.cc  test_unsigned_octal_hex.cc
